tests/ivg/invalid/negative_rounded_radius.ivg
format IVG-3
BOUNDS 0,0,10,10
rect 0,0,5,5 rounded:-1
